Fix AirSense 11 Series image filename for correct display

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <h3>AirSense 10 Series</h3>
       </div>
       <div class="card">
-        <img src="images/airsense11.png" alt="Oxygen Concentrators" />
+        <img src="images/Airsense11.png" alt="AirSense 11 Series" />
         <h3>AirSense 11 Series</h3>
       </div>
       <div class="card">
