Add SEO-optimized About page and update footer link

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       </div>
       <div class="footer-links">
         <a href="#hero">Home</a>
-        <a href="#about">About</a>
+        <a href="about.html">About</a>
         <a href="#services">Equipment</a>
         <a href="#contact">Contact</a>
       </div>
