--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
   <header class="navbar-header">
     <nav class="navbar">
       <div class="logo">
-        <a href="#hero">
-          <h1>JME</h1>
+        <a href="index.html">
+          <img src="images/MainLogo.svg" alt="Jama Medical Logo" />
         </a> 
       </div>
       <ul class="nav-links" id="navLinks">
@@ -170,6 +170,21 @@
       <div class="hamburger" id="hamburger">☰</div>
     </nav>
   </header>
+
+  <!-- ===================== 3-IMAGE HORIZONTAL SECTION ===================== -->
+  <section class="image-banner">
+    <div class="image-banner-container">
+      <div class="image-banner-item">
+        <img src="images/VentilatorTherapy1.jpg" alt="Ventilator Therapy" />
+      </div>
+      <div class="image-banner-item">
+        <img src="images/OxygenTherapy1.jpg" alt="Oxygen Therapy" />
+      </div>
+      <div class="image-banner-item">
+        <img src="images/copd2.jpg" alt="COPD Support" />
+      </div>
+    </div>
+  </section>
 
   <!-- ===================== HERO SECTION ===================== -->
   <section class="hero" id="hero">
@@ -332,8 +347,7 @@
     <div class="footer-content">
       <!-- Column 1: Branding -->
       <div class="footer-branding">
-        <div class="footer-logo">JME</div>
-        <p class="footer-tagline">Empowering Health. Supporting Independence.</p>
+        <div class="footer-logo"><img src="images/MainLogo.svg" alt="Jama Medical Logo" /></div>
       </div>
       
       <!-- Column 2: Navigation -->
@@ -420,6 +434,7 @@
         <button type="submit" class="modal-submit-btn">Submit Appointment</button>
       </form>
       <div id="consultationSuccess" style="display:none; margin-top:1.5rem; color:green; font-weight:bold; text-align:center;">Thank you! Your appointment has been submitted.</div>
+      <div id="consultationConfirmation" style="display:none; margin-top:1.5rem; color:#023e7d; font-weight:bold; text-align:center; font-size:1.2rem;">Appointment set</div>
     </div>
   </div>
   <!-- Main JavaScript file -->
