Fixed consultation form confirmation logic and modal auto-close

--- a/index.html
+++ b/index.html
@@ -433,8 +433,7 @@
         </div>
         <button type="submit" class="modal-submit-btn">Submit Appointment</button>
       </form>
-      <div id="consultationSuccess" style="display:none; margin-top:1.5rem; color:green; font-weight:bold; text-align:center;">Thank you! Your appointment has been submitted.</div>
-      <div id="consultationConfirmation" style="display:none; margin-top:1.5rem; color:#023e7d; font-weight:bold; text-align:center; font-size:1.2rem;">Appointment set</div>
+      <div id="confirmation-message" class="confirmation-message">✅ Appointment successfully scheduled!</div>
     </div>
   </div>
   <!-- Main JavaScript file -->
