Finalized recent site updates: disabled nav action, updated hero image, margin fixes, and new standalone page setup

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
             </div>
             <div class="dropdown-section">
               <h4>Why Choose JME?</h4>
-              <a href="#about">Licensed Respiratory Therapist</a>
-              <a href="#contact">Fast Local Delivery</a>
-              <a href="#services">Medicare Certified</a>
+              <a href="javascript:void(0);">Licensed Respiratory Therapist</a>
+              <a href="fast-delivery.html">Fast Local Delivery</a>
+              <a href="faqs.html">FAQ's</a>
             </div>
           </div>
         </li>
@@ -181,7 +181,7 @@
         <img src="images/OxygenTherapy1.jpg" alt="Oxygen Therapy" />
       </div>
       <div class="image-banner-item">
-        <img src="images/copd2.jpg" alt="COPD Support" />
+        <img src="images/OxygenTherapy2.jpg" alt="Oxygen Therapy Support" />
       </div>
     </div>
   </section>
