--- a/licensed-therapist.html
+++ b/licensed-therapist.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Jama Medical Equipment | Des Plaines DME</title>
-  <meta name="description" content="Learn more about Jama Medical Equipment – a trusted supplier of CPAPs, BiPAPs, hospital beds, and oxygen machines in Des Plaines, IL 60016." />
+  <title>Licensed Respiratory Therapist - Jama Medical Equipment</title>
+  <meta name="description" content="Learn about our licensed respiratory therapist services at Jama Medical Equipment in Des Plaines, IL." />
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -169,33 +169,9 @@
     </nav>
   </header>
 
-  <!-- ===================== HERO IMAGE ===================== -->
-  <!-- Image by National Cancer Institute on Unsplash -->
-  <img src="https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3&auto=format&fit=crop&w=2400&h=700&q=85" alt="Professional medical team discussing patient care" class="blog-hero">
-
-  <!-- ===================== BLOG CONTENT ===================== -->
+  <!-- ===================== MAIN CONTENT ===================== -->
   <main class="blog-content">
-    <h1>About Jama Medical Equipment</h1>
-    <h2>Serving the Des Plaines Community with High-Quality Medical Equipment</h2>
-
-    <p>Jama Medical Equipment LLC (JME) is a locally owned and operated durable medical equipment supplier dedicated to serving patients throughout Des Plaines, Illinois, and the surrounding Chicago suburbs. Located at 2434 E Dempster St Ste 207 in the heart of Des Plaines (60016), we are strategically positioned to provide fast, reliable delivery of essential medical equipment to patients who need it most.</p>
-
-    <p>Founded and operated by a licensed respiratory therapist, our business was built on a foundation of clinical expertise, compassionate service, and unwavering commitment to patient care. We understand that when patients are discharged from the hospital or managing chronic conditions at home, having the right medical equipment delivered quickly can make all the difference in their recovery and quality of life.</p>
-
-    <p>Our comprehensive equipment inventory includes: AirSense 10 and AirSense 11 Series CPAP and BiPAP machines for sleep apnea treatment, nebulizers for respiratory therapy, wheelchairs and mobility aids, crutches and walkers for recovery support, and hospital beds for extended home care. As a trusted DME supplier in the 60016 area, we specialize in respiratory care equipment and home oxygen concentrators, serving patients near O'Hare Airport and throughout the northwest Chicago suburbs.</p>
-
-    <p>We work directly with healthcare providers, physicians, and discharge planners to ensure seamless transitions from hospital to home. Our streamlined process minimizes wait times and paperwork, allowing patients to focus on their recovery while we handle the logistics. Whether you need CPAP machines in the Chicago suburbs, home oxygen delivery near O'Hare, or mobility equipment for elderly family members, JME provides personalized attention and expert guidance every step of the way.</p>
-
-    <p>As a fully accredited DME provider, Jama Medical Equipment adheres to the highest industry standards and Medicare compliance practices. Our team is extensively trained to educate patients and caregivers on proper equipment use, maintenance, and safety protocols. We believe that informed patients are empowered patients, and we take pride in supporting independence and improving quality of life for every individual we serve in the Des Plaines community and beyond.</p>
-
-    <hr>
-
-    <h3>Ready to Get Started?</h3>
-    <p>Contact Jama Medical Equipment today to learn how we can support your medical equipment needs with fast delivery, expert guidance, and compassionate service.</p>
-
-    <p>📍 2434 E Dempster St Ste 207, Des Plaines, IL 60016</p>
-    <p>📞 Phone: (224) 580-2168</p>
-    <p>✉️ Email: Jme@jamamedical.com</p>
+    <h2>Licensed Respiratory Therapist</h2>
   </main>
 
   <!-- ===================== FOOTER ===================== -->
