--- a/faqs.html
+++ b/faqs.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Jama Medical Equipment | Des Plaines DME</title>
-  <meta name="description" content="Learn more about Jama Medical Equipment – a trusted supplier of CPAPs, BiPAPs, hospital beds, and oxygen machines in Des Plaines, IL 60016." />
+  <title>FAQ's - Jama Medical Equipment</title>
+  <meta name="description" content="Frequently asked questions about Jama Medical Equipment services in Des Plaines, IL." />
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -141,7 +141,7 @@
             </div>
             <div class="dropdown-section">
               <h4>Why Choose JME?</h4>
-              <a href="licensed-therapist.html">Licensed Respiratory Therapist</a>
+              <a href="javascript:void(0);">Licensed Respiratory Therapist</a>
               <a href="fast-delivery.html">Fast Local Delivery</a>
               <a href="faqs.html">FAQ's</a>
             </div>
@@ -169,33 +169,41 @@
     </nav>
   </header>
 
-  <!-- ===================== HERO IMAGE ===================== -->
-  <!-- Image by National Cancer Institute on Unsplash -->
-  <img src="https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3&auto=format&fit=crop&w=2400&h=700&q=85" alt="Professional medical team discussing patient care" class="blog-hero">
-
-  <!-- ===================== BLOG CONTENT ===================== -->
+  <!-- ===================== MAIN CONTENT ===================== -->
   <main class="blog-content">
-    <h1>About Jama Medical Equipment</h1>
-    <h2>Serving the Des Plaines Community with High-Quality Medical Equipment</h2>
+    <section class="faq-section">
+      <h2>Frequently Asked Questions (FAQs)</h2>
 
-    <p>Jama Medical Equipment LLC (JME) is a locally owned and operated durable medical equipment supplier dedicated to serving patients throughout Des Plaines, Illinois, and the surrounding Chicago suburbs. Located at 2434 E Dempster St Ste 207 in the heart of Des Plaines (60016), we are strategically positioned to provide fast, reliable delivery of essential medical equipment to patients who need it most.</p>
+      <div class="faq">
+        <h3>1. How does Jama Medical Equipment support patients during setup?</h3>
+        <p>We provide personalized, hands-on support during setup, where a licensed respiratory therapist walks each patient through proper mask fitting, equipment usage, and cleaning. This one-on-one approach builds comfort, confidence, and compliance, leading to better outcomes and a smoother experience for both patients and providers.</p>
+      </div>
 
-    <p>Founded and operated by a licensed respiratory therapist, our business was built on a foundation of clinical expertise, compassionate service, and unwavering commitment to patient care. We understand that when patients are discharged from the hospital or managing chronic conditions at home, having the right medical equipment delivered quickly can make all the difference in their recovery and quality of life.</p>
+      <div class="faq">
+        <h3>2. Do you help with CPAP or BiPAP compliance monitoring?</h3>
+        <p>Yes! We actively track patient usage data for CPAP and BiPAP devices and send reports when needed. If a patient is not using their device as prescribed, we follow up early to get them back on track. This improves outcomes and helps doctors meet Medicare documentation and continuation of therapy requirements.</p>
+      </div>
 
-    <p>Our comprehensive equipment inventory includes: AirSense 10 and AirSense 11 Series CPAP and BiPAP machines for sleep apnea treatment, nebulizers for respiratory therapy, wheelchairs and mobility aids, crutches and walkers for recovery support, and hospital beds for extended home care. As a trusted DME supplier in the 60016 area, we specialize in respiratory care equipment and home oxygen concentrators, serving patients near O'Hare Airport and throughout the northwest Chicago suburbs.</p>
+      <div class="faq">
+        <h3>3. How quickly can patients receive equipment and support?</h3>
+        <p>We aim to provide same-day or next-day setup whenever possible. You'll also have direct access to our respiratory therapists — no call centers or long hold times. Whether you need to place an order, send documentation, or ask a question, we respond quickly and personally every time.</p>
+      </div>
 
-    <p>We work directly with healthcare providers, physicians, and discharge planners to ensure seamless transitions from hospital to home. Our streamlined process minimizes wait times and paperwork, allowing patients to focus on their recovery while we handle the logistics. Whether you need CPAP machines in the Chicago suburbs, home oxygen delivery near O'Hare, or mobility equipment for elderly family members, JME provides personalized attention and expert guidance every step of the way.</p>
+      <div class="faq">
+        <h3>4. Do you accept insurance, and what are the billing options?</h3>
+        <p>Yes, we bill Medicare, Medicaid, and most private insurances. For patients without coverage, we offer affordable cash-pay options. We follow all billing rules and ABN requirements, ensuring your patients are protected and your referrals are fully compliant.</p>
+      </div>
 
-    <p>As a fully accredited DME provider, Jama Medical Equipment adheres to the highest industry standards and Medicare compliance practices. Our team is extensively trained to educate patients and caregivers on proper equipment use, maintenance, and safety protocols. We believe that informed patients are empowered patients, and we take pride in supporting independence and improving quality of life for every individual we serve in the Des Plaines community and beyond.</p>
+      <div class="faq">
+        <h3>5. How easy is it to send a referral?</h3>
+        <p>It's very simple. You can send referrals via fax, email, or through your EMR — whatever works best for your workflow. We'll handle the paperwork, including chart notes, medical necessity, and insurance documentation, and provide a fast, fillable referral form if needed.</p>
+      </div>
 
-    <hr>
-
-    <h3>Ready to Get Started?</h3>
-    <p>Contact Jama Medical Equipment today to learn how we can support your medical equipment needs with fast delivery, expert guidance, and compassionate service.</p>
-
-    <p>📍 2434 E Dempster St Ste 207, Des Plaines, IL 60016</p>
-    <p>📞 Phone: (224) 580-2168</p>
-    <p>✉️ Email: Jme@jamamedical.com</p>
+      <div class="faq">
+        <h3>6. What kind of patients can I refer to Jama Medical Equipment?</h3>
+        <p>We specialize in respiratory care and would love to assist your next patient who needs CPAP, BiPAP, or a home ventilator. Just send the referral, and our team will take care of everything — from setup to compliance monitoring.</p>
+      </div>
+    </section>
   </main>
 
   <!-- ===================== FOOTER ===================== -->
