--- a/ventilator.html
+++ b/ventilator.html
@@ -141,9 +141,9 @@
             </div>
             <div class="dropdown-section">
               <h4>Why Choose JME?</h4>
-              <a href="index.html#about">Licensed Respiratory Therapist</a>
-              <a href="index.html#contact">Fast Local Delivery</a>
-              <a href="index.html#services">Medicare Certified</a>
+              <a href="licensed-therapist.html">Licensed Respiratory Therapist</a>
+              <a href="fast-delivery.html">Fast Local Delivery</a>
+              <a href="faqs.html">Medicare Certified</a>
             </div>
           </div>
         </li>
