Updated right hero image to Image3.jpg on homepage

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <img src="images/OxygenTherapy1.jpg" alt="Oxygen Therapy" />
       </div>
       <div class="image-banner-item">
-        <img src="images/OxygenTherapy2.jpg" alt="Oxygen Therapy Support" />
+        <img src="images/Image3.jpg" alt="Hero Right Image" />
       </div>
     </div>
   </section>
